added contact page

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -106,3 +106,8 @@ code {
  color: rgba(255, 255, 255, 1);
  box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
 }
+
+.gray-lg{
+    color: #8f8f90;
+    font-size: 36px;
+}
