--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -35,16 +35,16 @@
                               class="donateForm">
                             <input type="hidden" name="cmd" value="_s-xclick">
                             <input type="hidden" name="hosted_button_id" value="NWWTRPY5NF8T8">
-                            <input type="button" name="submit" value="Donate Now!" alt="Donate Now"
+                            <input type="submit" name="submit" value="Donate Now!" alt="Donate Now"
                                    class="btn btn-danger glow-button"/>
                         </form>
 
                     </li>
-                    <li role="presentation" class="active"><a href="#">Home</a></li>
-                    <li role="presentation"><a href="programs.html">Programs</a></li>
-                    <li role="presentation"><a href="prayertimes.html">Prayer Times</a></li>
-                    <li role="presentation"><a href="donations.html">Donations</a></li>
-                    <li role="presentation"><a href="contactus.html">Contact Us</a></li>
+                    <li role="presentation" th:class="${index}"><a th:href="@{/home}">Home</a></li>
+                    <li role="presentation" th:class="${programs}"><a th:href="@{/programs}">Programs</a></li>
+                    <!--<li role="presentation"><a href="prayertimes.html">Prayer Times</a></li>
+                    <li role="presentation"><a href="donations.html">Donations</a></li>-->
+                    <li role="presentation" th:class="${contactus}"><a th:href="@{/contactus}">Contact Us</a></li>
                 </ul>
             </div>
 
