--- a/src/main/resources/templates/programs.html
+++ b/src/main/resources/templates/programs.html
@@ -1,123 +1,14 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" layout:decorate="~{layout}"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<meta charset="UTF-8"/>
-<meta content="IE-edge"  http-equiv="X-UA-Compatible" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-<title>Masjid Sahabah - Programs</title>
-<link rel="shortcut icon" href="images/fav-icon.ico" type="image/x-icon" >
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script> 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-<script src="js/app.js"></script>
-<link href="css/app.css" rel="stylesheet" />
 </head>
 <body>
-
-<div id="header">
-<header class="navbar navbar-inverse ms-header navbar-fixed-top">
-<div class="container"> 
-	<div class="collapse navbar-collapse">
-		<div class="row">
-		<div class="col-md-4">
-			<div id="todaysdate"></div>
-		</div>
-		<div class="col-md-4">
-			<img src="images/header.png" height="35px" width="215px"/>
-		</div>
-		
-		<ul class="nav navbar-nav navbar-right">
-			<li><span class="glyphicon glyphicon-home"></span> 14225 University Ave # 270, Waukee, IA 50263</li>
-		</ul>
-		
-		</div>
-	</div>
-
-	<div>
-		<ul class="nav nav-pills nav-justified">
-		<li>
-				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" class="donateForm">
-					<input type="hidden" name="cmd" value="_s-xclick">
-					<input type="hidden" name="hosted_button_id" value="NWWTRPY5NF8T8">
-					<input type="button" name="submit" value="Donate Now!" alt="Donate Now" class="btn btn-danger" />
-				</form>		
-		
-		</li>		
-  			  <li role="presentation" ><a href="index.html">Home</a></li>
-			  <li role="presentation" class="active"><a href="#">Programs</a></li>
-			  <li role="presentation"><a href="#">Prayer Times</a></li>
-			  <!-- <li role="presentation"><a href="#">Links</a></li>-->
-			  <li role="presentation"><a href="#">Donations</a></li>
-			  <li role="presentation"><a href="#">Contact Us</a></li>
-		</ul>
-	</div>
+<div layout:fragment="content">
 
 
-</div>
-
-</header>
-</div>
-
-<header class="jumbotron subhead">
-  <div class="container">
-  <div class="row">
-		<div class="col-md-3 logo-margin">
-			<img src="images/ms-logo-4.png" height="65px" width="185px"/>
-		</div>
-		<div class="col-md-9">
-		
-			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-			  <!-- Indicators -->
-			  <ol class="carousel-indicators">
-			    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-			  </ol>
-			 
-			  <!-- Wrapper for slides -->
-			  <div class="carousel-inner">
-			    <div class="item active">
-                    <div class="carousel-content">
-                        <div>
-                            <h3 class="heading-color">Easier than ever to fulfill the most important commandment of Allah</h3>
-                            <span>The masjid is within 5 to 10 mins of driving distance from the surrounding community and observes all five prayers daily.</span>
-                        </div>
-                    </div>
-			    </div>
-			    <div class="item">
-                    <div class="carousel-content">
-                        <div>
-                            <h3 class="heading-color">Preparing our next generation</h3>
-                            <span>The masjid offers weekly Islamic teachings to girls between the ages 5 to 8 every Sunday</span>
-                        </div>
-                    </div>
-			    </div>
-			    <div class="item">
-                    <div class="carousel-content">
-                        <div>
-                            <h3 class="heading-color">Generation of Islamic Scholars and Huffaz</h3>
-                            <span>Coming very soon the school for boys offering classes of Islamic Studies and Nazera &amp; Hifz</span>
-                        </div>
-                    </div>
-			    </div>
-			  </div>
-			 
-			 
-			</div> <!-- Carousel -->			
-			
-			
-		</div>
-	</div>
-  
-    
-  </div>
-</header>
-
-<div class="container">
-	
 	<div class="panel panel-default">
 	  <div class="panel-heading">
 	    <h3 class="panel-title heading-color">Current Programs</h3>
@@ -176,19 +67,12 @@
 	  </div>
 	</div>
 	
+
+
+
+
+
+
 </div>
-	
-
-
-
-
-
-<footer class="footer">
-      <div class="container">
-        <div id="footertext" class="text-muted"></div>
-      </div>
-</footer>
-<!-- Latest compiled JavaScript -->
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
